--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -91,7 +91,7 @@
             <!--* ข้อ 1 K1 *-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>1. ข้อมูลประเภท int ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
+                <h5>ข้อมูลประเภท int ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
                 <br><br>
                 <p style="text-align: center;" id="demo1"> </p>
                 </div>
@@ -113,7 +113,7 @@
             <!--* ข้อ 2 K2 *-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>2. ข้อมูลประเภท float ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
+                <h5>ข้อมูลประเภท float ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
                 <br><br>
                 <p style="text-align: center;" id="demo2"> </p>
                 </div>
@@ -135,7 +135,7 @@
             <!--* ข้อ 3 K3 *-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>3. ข้อมูลประเภท char ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
+                <h5>ข้อมูลประเภท char ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
                 <br><br>
                 <p style="text-align: center;" id="demo3"> </p>
                 </div>
@@ -160,7 +160,7 @@
             <!--* ข้อ 4 K4 *-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>4. ข้อใดประกาศตัวแปรประเภท double ในภาษา C ได้ถูกต้อง</h5>
+                <h5>ข้อใดประกาศตัวแปรประเภท double ในภาษา C ได้ถูกต้อง</h5>
                 <br><br>
                 <p style="text-align: center;" id="demo4"> </p>
                 </div>
@@ -183,7 +183,7 @@
                 <!--* ข้อ 5 K6 *-->
                 <div class="gamecontent">
                     <div  class="question">
-                    <h5>5. ตัวแปรในการเขียนโปรแกรมคืออะไร</h5>
+                    <h5>ตัวแปรในการเขียนโปรแกรมคืออะไร</h5>
                     <br><br>
                     <p style="text-align: center;" id="demo5"> </p>
                     </div>
@@ -207,7 +207,7 @@
             <!--* ข้อ 6 K5 *-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>6. ข้อใดถูกต้องเกี่ยวกับการใช้ Format Specifier ในการรับและแสดงผลค่าของตัวแปร</h5>
+                <h5>ข้อใดถูกต้องเกี่ยวกับการใช้ Format Specifier ในการรับและแสดงผลค่าของตัวแปร</h5>
                 <br><br>
                 <p style="text-align: center;" id="demo6"> </p>
                 </div>
@@ -232,7 +232,7 @@
             <!--* ข้อ 7 K7 *-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>7. การประกาศตัวแปร int x = 9; ในภาษา C หมายความว่าอย่างไร</h5>
+                <h5>การประกาศตัวแปร int x = 9; ในภาษา C หมายความว่าอย่างไร</h5>
                 <br><br>
                 <p style="text-align: center;" id="demo7"> </p>
                 </div>
@@ -254,7 +254,7 @@
             <!--* ข้อ 8 K8 *-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>8. การใช้ตัวแปรประเภทค่าคงที่ เช่น const int MAX 100; หรือ  #define MAX 100 ในภาษา C มีความหมายอย่างไร </h5>
+                <h5>การใช้ตัวแปรประเภทค่าคงที่ เช่น const int MAX 100; หรือ  #define MAX 100 ในภาษา C มีความหมายอย่างไร </h5>
                 <br><br>
                 <p style="text-align: center;" id="demo8"> </p>
                 </div>
@@ -279,7 +279,7 @@
             <!--* ข้อ 9 K9*-->
             <div class="gamecontent">
                 <div class="question">
-                <h5>9. ตัวแปรที่ประกาศภายในฟังก์ชันและใช้งานได้เฉพาะภายในฟังก์ชันนั้นเรียกว่าอะไร</h5>
+                <h5>ตัวแปรที่ประกาศภายในฟังก์ชันและใช้งานได้เฉพาะภายในฟังก์ชันนั้นเรียกว่าอะไร</h5>
                 <br><br>
                 <p style="text-align: center;" id="demo9"> </p>
                 
@@ -302,7 +302,7 @@
             <!--* ข้อ 10 K10*-->
             <div class="gamecontent">
                 <div  class="question">
-                <h5>10. ตัวแปรที่ประกาศภายนอกฟังก์ชันและใช้งานได้ทั้งโปรแกรมนั้นเรียกว่าอะไร</h5>
+                <h5>ตัวแปรที่ประกาศภายนอกฟังก์ชันและใช้งานได้ทั้งโปรแกรมนั้นเรียกว่าอะไร</h5>
                 <br><br>
                 <p style="text-align: center;" id="demo10"> </p>
                 
@@ -331,7 +331,7 @@
             <!--* ข้อ 11 T1 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>1. โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
                 <p>#include < stdio.h > 
                 <br>int main() {
                 <br>&ensp;int a = 20;
@@ -357,7 +357,7 @@
             <!--* ข้อ 12 T2 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>2. โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
                 <p>#include < stdio.h > 
                 <br>int main() {
                 <br>&ensp;int a = 20;
@@ -387,7 +387,7 @@
             <!--* ข้อ 13 T3 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>3. โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
                 <p>#include < stdio.h > 
                 <br>int main() {
                 <br>&ensp; int x = 5;
@@ -415,7 +415,7 @@
             <!--* ข้อ 14 T4 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>4. โปรแกรมนี้เมื่อรันเสร็จค่าของตัวแปร x, y, z จะเป็นค่าอะไร</h5>
+                <h5>โปรแกรมนี้เมื่อรันเสร็จค่าของตัวแปร x, y, z จะเป็นค่าอะไร</h5>
                 <p>#include < stdio.h > 
                 <br>int main() {
                 <br>&ensp;float x = 10.11;
@@ -451,7 +451,7 @@
             <!--* ข้อ 15 T5 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>5. โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
                 <p>#include < stdio.h > 
                 <br>#define MAX_VALUE 50
                 <br>int main() {
@@ -477,7 +477,7 @@
             <!--* ข้อ 16 T6 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>6. โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
                 <p>#include < stdio.h > 
                 <br>#define MAX_VALUE 125
                 <br>int main() {
@@ -508,7 +508,7 @@
             <!--* ข้อ 17 T7 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>7. โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
                 <p>#include < stdio.h > 
                 <br>#define MAX_VALUE 80
                 <br>int main() {
@@ -538,7 +538,7 @@
             <!--* ข้อ 18 T8 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>8. โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
                 <p>#include < stdio.h > 
                 <br>#define MAX_VALUE 80
                 <br>int main() {
@@ -571,7 +571,7 @@
             <!--* ข้อ 19 T9 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>9. โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
                 <p>#include < stdio.h >
                 <br>int a = 30;
                 <br>int main() {
@@ -603,7 +603,7 @@
             <!--* ข้อ 20 T10 *-->
             <div class="gamecontent-T">
                 <div  class="question-T">
-                <h5>10. โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
+                <h5>โปรแกรมนี้จะแสดงผลลัพธ์อะไร</h5>
                 <p>#include < stdio.h >
                 <br>const int a = 30;
                 <br>int b = 40;
@@ -642,7 +642,7 @@
             <!--* ข้อ 21 E1*-->
             <div class="gamecontent-E">
                 <div  class="question-E">
-                    <h5>1. ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
+                    <h5>ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
                     <p>#include < stdio.h >
                     <br>int main() {
                     <br>&ensp;int a = 30;
@@ -684,7 +684,7 @@
         <!--* ข้อ 22 E2*-->
             <div class="gamecontent-E">
                 <div  class="question-E">
-                    <h5>2. ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
+                    <h5>ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
                     <p>#include < stdio.h >
                     <br>int main() {
                     <br>&ensp;int a = 60;
@@ -732,7 +732,7 @@
             <!--* ข้อ 23 E3*-->
                 <div class="gamecontent-E">
                     <div  class="question-E">
-                        <h5>3. ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
+                        <h5>ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
                         <p>#include < stdio.h >
                         <br>int main() {
                         <br>&ensp;int x = 45;
@@ -780,7 +780,7 @@
                 <!--* ข้อ 24 E4 *-->
                     <div class="gamecontent-E">
                         <div  class="question-E">
-                            <h5>4. ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
+                            <h5>ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
                             <p>#include < stdio.h >
                             <br>int main() {
                             <br>&ensp;float x = 8.12;
@@ -840,7 +840,7 @@
                 <!--* ข้อ 25 E5 *-->
                     <div class="gamecontent-E">
                         <div  class="question-E">
-                            <h5>5. ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
+                            <h5>ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
                             <p>#include < stdio.h >
                             <br>#define MAX_VALUE 100
                             <br>int main() {
@@ -883,7 +883,7 @@
                 <!--* ข้อ 26 E6 *-->
                     <div class="gamecontent-E">
                         <div  class="question-E">
-                            <h5>6. ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
+                            <h5>ข้อใดอธิบายการทำงานของ Source Code นี้ได้ถูกต้อง</h5>
                             <p>#include < stdio.h >
                             <br>#define NUMBER3 325
                             <br>int main() {
@@ -934,7 +934,7 @@
                 <!--* ข้อ 27 E7*-->
                 <div class="gamecontent-E">
                     <div  class="question-E">
-                    <h5>7. ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
+                    <h5>ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
                     <p>#include < stdio.h >
                     <br>#define MAX_VALUE 100
                     <br>int main() {
@@ -971,7 +971,7 @@
                 <!--* ข้อ 28 E8 *-->
                 <div class="gamecontent-E">
                     <div  class="question-E">
-                    <h5>8. ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
+                    <h5>ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
                     <p>#include < stdio.h > 
                     <br>#define MAX_VALUE 120
                     <br>int main() {
@@ -1011,7 +1011,7 @@
             <!--* ข้อ 29 E9 *-->
                 <div class="gamecontent-E">
                     <div  class="question-E">
-                    <h5>9. ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
+                    <h5>ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
                     <p>#include < stdio.h > 
                     <br>int number1 = 23;
                     <br>int main() {
@@ -1054,7 +1054,7 @@
                     <!--* ข้อ 30 E10 *-->
                         <div class="gamecontent-E">
                             <div  class="question-E">
-                            <h5>10. ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
+                            <h5>ข้อใดอธิบายการทำงานของโค้ดนี้ได้ถูกต้อง</h5>
                             <p>#include < stdio.h > 
                             <br>const int a = 330;
                             <br>int b = 840;
