--- a/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
+++ b/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
@@ -22,6 +22,14 @@
                 font-size: 3.5rem;
             }
         }
+        a.DrawIo {
+            color: black;
+            text-decoration: none;
+            background-color: #e28f42;
+            height: 40px;
+            width: 400px;
+            text-align: center;
+        }
         
     </style>
     <link rel='stylesheet' href='stylesheets/gamequiz.css' />
@@ -1104,8 +1112,8 @@
                     <!--* 1 *-->
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">1.ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้ </h5>
-                        <iframe src="https://drive.google.com/file/d/1Onki3zouzMnttxv72keegUi77jj7DOTH/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/1Onki3zouzMnttxv72keegUi77jj7DOTH/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>  
                     </div>
                 </div>
                 <div class="game">
@@ -1121,8 +1129,8 @@
                 <div class="game">
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">2. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
-                        <iframe src="https://drive.google.com/file/d/1pnKd7OHrl8ipi9GdoUXX1y2L4VMjMkdm/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/1pnKd7OHrl8ipi9GdoUXX1y2L4VMjMkdm/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>  
                     </div>
                 </div>
                 <div class="game">
@@ -1138,8 +1146,8 @@
                 <div class="game">
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">3. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
-                        <iframe src="https://drive.google.com/file/d/1MwI5nBTB65m9W6qnGvjBGgeRlTUC4S4s/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/1MwI5nBTB65m9W6qnGvjBGgeRlTUC4S4s/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>  
                     </div>
                 </div>
                 <div class="game">
@@ -1155,8 +1163,8 @@
                 <div class="game">
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">4. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
-                        <iframe src="https://drive.google.com/file/d/1Qz0E20kde2wVUOwDUY1Xj_3EZ3Xmjca1/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/1Qz0E20kde2wVUOwDUY1Xj_3EZ3Xmjca1/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>  
                     </div>
                 </div>
                 <div class="game">
@@ -1173,8 +1181,8 @@
                 <div class="game">
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">5. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
-                        <iframe src="https://drive.google.com/file/d/1rEXx7sBhfHjzd83b_cFHi8-jJ5XAaDaw/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/1rEXx7sBhfHjzd83b_cFHi8-jJ5XAaDaw/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>  
                     </div>
                 </div>
                 <div class="game">
@@ -1190,8 +1198,8 @@
                 <div class="game">
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">6. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
-                        <iframe src="https://drive.google.com/file/d/1mWWd87jbFEuar5z8SQxteXE1xqzuwtRw/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/1mWWd87jbFEuar5z8SQxteXE1xqzuwtRw/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>   
                     </div>
                 </div>
                 <div class="game">
@@ -1207,8 +1215,8 @@
                 <div class="game">
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">7. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
-                        <iframe src="https://drive.google.com/file/d/1SHC6tnw22WopjMdXuf6YxUglbklBs0Hp/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/1SHC6tnw22WopjMdXuf6YxUglbklBs0Hp/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>  
                     </div>
                 </div>
                 <div class="game">
@@ -1224,8 +1232,8 @@
                 <div class="game">
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">8. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
-                        <iframe src="https://drive.google.com/file/d/19u1LK-LX1ltWVFXe_GJUyT6AqBpZJy5d/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/19u1LK-LX1ltWVFXe_GJUyT6AqBpZJy5d/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>  
                     </div>
                 </div>
                 <div class="game">
@@ -1241,8 +1249,8 @@
                 <div class="game">
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">9. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
-                        <iframe src="https://drive.google.com/file/d/1hLsiCI-_w7r1fnx0SazYuH5WAFBFsybC/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/1hLsiCI-_w7r1fnx0SazYuH5WAFBFsybC/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>  
                     </div>
                 </div>
                 <div class="game">
@@ -1258,8 +1266,8 @@
                 <div class="game">
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">10. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
-                        <iframe src="https://drive.google.com/file/d/15vWwjm3h2oliiIB_E5f_sI0MQFOTNSC0/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://drive.google.com/file/d/15vWwjm3h2oliiIB_E5f_sI0MQFOTNSC0/preview" width="100%" height="500" allow="autoplay"></iframe>                    
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a>  
                     </div>
                 </div>
                 <div class="game">
