--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -468,15 +468,15 @@
                                 <div class="col" style="display: flex;">
                                     <div class="card-body">
                                         <h5 class="card-title">Quiz 1</h5>
-                                        <div class="pie animate" style="--p:<%= Quiz1Score*4 %>;--c:#bd7b67; font-size: 14px;"> <%= PrjQuiz1Score %></div>
+                                        <div class="pie animate" style="--p:<%= Quiz1Score %>;--c:#bd7b67; font-size: 14px;"> <%= PrjQuiz1Score %></div>
                                     </div>
                                     <div class="card-body">
                                         <h5 class="card-title">Quiz 2</h5>
-                                        <div class="pie animate" style="--p:<%= Quiz2Score*4 %>;--c:#bd7b67; font-size: 14px;"> <%= PrjQuiz2Score %></div>
+                                        <div class="pie animate" style="--p:<%= Quiz2Score %>;--c:#bd7b67; font-size: 14px;"> <%= PrjQuiz2Score %></div>
                                     </div>
                                     <div class="card-body"> 
                                         <h5 class="card-title">Quiz 3</h5>
-                                        <div class="pie animate" style="--p:<%= Quiz3Score*4 %>;--c:#bd7b67; font-size: 14px;"> <%= PrjQuiz3Score %></div>
+                                        <div class="pie animate" style="--p:<%= Quiz3Score %>;--c:#bd7b67; font-size: 14px;"> <%= PrjQuiz3Score %></div>
                                     </div>
                                 </div>
                             </div>
