--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -145,9 +145,8 @@ else {
             cLV1 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV1 === 3){
-            checkedLV1 = "✗";
-            training1 = "ทำแบบฝึกหัดเพิ่มเติม";
-            cLV1 = "background-color: #e06666;"
+            checkedLV1 = "✓";
+            cLV1 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV1 === 2){
             checkedLV1 = "✗";
@@ -175,9 +174,8 @@ else {
             cLV2 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV2 === 3){
-            checkedLV2 = "✗";
-            training2 = "ทำแบบฝึกหัดเพิ่มเติม";
-            cLV2 = "background-color: #e06666;"
+            checkedLV2 = "✓";
+            cLV2 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV2 === 2){
             checkedLV2 = "✗";
@@ -205,9 +203,8 @@ else {
             cLV3 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV3 === 3){
-            checkedLV3 = "✗";
-            training3 = "ทำแบบฝึกหัดเพิ่มเติม";
-            cLV3 = "background-color: #e06666;"
+            checkedLV3 = "✓";
+            cLV3 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV3 === 2){
             checkedLV3 = "✗";
