--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -49,7 +49,7 @@
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
             <div id="collapseIntroduce" class="accordion-collapse show project shadow" style="background-color: #bd7b67;" data-bs-parent="#accordionParentSyntax">
-                <h1>Project</h1> <!--
+                <h1>Project Quiz</h1> <!--
                 <ol class="breadcrumb" style="background-color: #3a4e93;">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
                     <li class="breadcrumb-item active" aria-current="page">Project</li>
@@ -101,7 +101,7 @@
                     <h3>Project ปลดล็อกครบแล้ว!</h3>
                     <a href="/" class="btn button">กลับไปหน้าแรก</a>
                   <% } else{ %>  
-                    <h3>มีอีก <%= count %> Project ที่ยังไม่ปลดล็อก!</h3>
+                    <h3>มีอีก <%= count %> Project ที่ยังไม่ปลดล็อก!</h3> <br>
                     <a href="/course" class="btn button">เข้าสู่บทเรียน</a>
                  <% } %>
                 
