--- a/views/layouts/course-middle_Score.ejs
+++ b/views/layouts/course-middle_Score.ejs
@@ -3,7 +3,6 @@
     a.a {
         font-size: 15px;
         color: #fff700;
-        text-shadow:#ac28ff 1px 0 2px;
     }
     a.a:hover { 
         color: #6dffe7;
@@ -26,28 +25,33 @@ if(Object.keys(StudentAnswer).length === 0) {
 else {
     %>
     <div id = "content" class="container">
-        <h1 id = 'content'> Assignment Status </h1>   
-        <h5 >ช่องที่เป็นสีแดง <button class="boxcolor">  </button> ให้คลิกเข้าไปฝึกทำแบบฝึกหัดเพิ่มเติม</h5>
+        <h1 style="color: #000;" id = 'content'> Assignment Status </h1>   
+        <p>ช่องที่เป็นสีแดง <button class="boxcolor">  </button> ให้คลิกเข้าไปฝึกทำแบบฝึกหัดเพิ่มเติม</p>
 
-        <div class="box bg-light  mb-5 shadow" >
+        <div class="box bg-light  mb-5 shadow" style="padding: 10px; border-radius: 5px;">
         <table class="table text-center">
             <thead>
             <tr>
+                <th scope="col" class="col-1 text-center">ทำครั้งที่</th>
+                <th scope="col" class="col-2 text-center">เวลา</th>
                 <th scope="col" class="col-4 text-center">Quiz</th>
+                
                 <th scope="col" class="col-1 t">Knowledge</th>
                 <th scope="col" class="col-1 t"> Tracing </th>
                 <th scope="col" class="col-1 t">Explaining</th>
                 <th scope="col" class="col-1 t"> Writing </th>
+               <!-- -->
                 <th scope="col" class="col-1 t">ผู้ตรวจ</th>
                 </th>
             </tr>
             </thead> 
             <tbody class="text-end">
     <%
-    for (let i = 0; i  < Object.keys(StudentAnswer).length; i++) {  
+    for (let i = 0; i < Object.keys(StudentAnswer).length; i++) {  
         var Condition = 0;
         var checkedLV1 = "" ,checkedLV2 = "",checkedLV3 = "",checkedLV4,TeacherCheck;
         var cLV1 = "background-color: #F8F9FA;", cLV2 = "background-color: #F8F9FA;", cLV3 = "background-color: #F8F9FA;", cLV4 = "background-color: #F8F9FA;";
+        var bgColor = "background-color: #F8F9FA;";
         var training1 = "" ,training2 = "", training3 = "", training4 = "";
         var k = "", t = "", e = "", w = "";
 
@@ -75,28 +79,59 @@ else {
         } 
 
         
-        /* Check Value LV4 Score**/
-        if(StudentAnswer[i].contentName === "TicketBookingSystem-(Project_quiz1)" ){
-            if(StudentAnswer[i].scoreQuiz != undefined )
-            {
+        /* Check Value LV4 Score**/    <!--****** -->
+        if(StudentAnswer[i].contentName === "TicketBookingSystem-(Project_quiz1)" || StudentAnswer[i].contentName === "PointofSalesSystem-(Project_quiz2)" || StudentAnswer[i].contentName === "Project_QUIZ3") {
+            if(typeof(StudentAnswer[i].scoreQuiz) === "number" ){
                 checkedLV4 = StudentAnswer[i].scoreQuiz;
-            }
-            TeacherCheck = StudentAnswer[i].checkedBy;
-            
-            if(StudentAnswer[i].scoreQuiz >= 20){
-               cLV4 = "background-color: #93c47d;" 
-            }
-            else {
-                training4 = "ทำแบบฝึกหัดเพิ่มเติม";
-                cLV4 = "background-color: #e06666;" 
-            }
-           
+                TeacherCheck = StudentAnswer[i].checkedBy;
+                bgColor = "background-color: #fff;"
 
+                if(StudentAnswer[i].scoreQuiz >= 80){
+                    cLV4 = "background-color: #93c47d;" <!-- green-->
+                }
+                else{
+                    cLV4 = "background-color: #e06666;" <!-- red -->
+                }
+            }
+        }else{
+            if(typeof(StudentAnswer[i].scoreTeacher) === "number" ){
+                checkedLV4 = StudentAnswer[i].scoreTeacher;
+                TeacherCheck = StudentAnswer[i].checkedBy;
+                bgColor = "background-color: #fff;"
+                
+                if(StudentAnswer[i].scoreTeacher >= 20){
+                    checkedLV4 = "✓"
+                    cLV4 = "background-color: #93c47d;" 
+                }
+                else {
+                    training4 = "ทำแบบฝึกหัดเพิ่มเติม";
+                    cLV4 = "background-color: #e06666;" 
+                    checkedLV4 = "✗"
+                }
+            }else{
+                checkedLV4 = "-"
+                TeacherCheck = "รอตรวจ";
+                bgColor = "background-color: #ffd75e;" <!-- yellow -->
+            }
+            if(StudentAnswer[i].contentName === ""){ <!-- *เช็คการเข้าสู่ระบบครั้งแรก* -->
+                checkedLV4 = "";
+                TeacherCheck = "";
+                bgColor = "background-color: #fff;"
+            }
         }
-        else{
-            checkedLV4 = "-";
-            TeacherCheck = "รอตรวจ";
-        }
+    
+
+
+
+
+
+            
+
+  
+       
+                
+            
+        
 
         /* Score tranfrom to Pass/Not Pass**/
         
@@ -109,9 +144,8 @@ else {
             cLV1 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV1 === 3){
-            checkedLV1 = "✗";
-            training1 = "ทำแบบฝึกหัดเพิ่มเติม";
-            cLV1 = "background-color: #e06666;"
+            checkedLV1 = "✓";
+            cLV1 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV1 === 2){
             checkedLV1 = "✗";
@@ -139,9 +173,8 @@ else {
             cLV2 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV2 === 3){
-            checkedLV2 = "✗";
-            training2 = "ทำแบบฝึกหัดเพิ่มเติม";
-            cLV2 = "background-color: #e06666;"
+            checkedLV2 = "✓";
+            cLV2 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV2 === 2){
             checkedLV2 = "✗";
@@ -169,9 +202,8 @@ else {
             cLV3 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV3 === 3){
-            checkedLV3 = "✗";
-            training3 = "ทำแบบฝึกหัดเพิ่มเติม";
-            cLV3 = "background-color: #e06666;"
+            checkedLV3 = "✓";
+            cLV3 = "background-color: #93c47d;"
         }
         if(StudentAnswer[i].scoreLV3 === 2){
             checkedLV3 = "✗";
@@ -194,6 +226,7 @@ else {
             t = "/course-Algorithms_and_Flowcharts#Tracing";
             e = "/course-Algorithms_and_Flowcharts#Explaining";
             w = "/course-Algorithms_and_Flowcharts";
+            p = StudentAnswer[i].scoreLV3
         }
         
         if(StudentAnswer[i].contentName === "Datatype_and_Variable-(Pre-test)" || StudentAnswer[i].contentName === "Datatype_and_Variable-(Post-test)" ){
@@ -250,12 +283,16 @@ else {
         if(Condition != 0 ){
 
         }else{%>
+            <th scope="row" class="text-center"><%=StudentAnswer[i].timetodo%></th>
+            <td class="text-center"><%=StudentAnswer[i].times%></td>
             <td class="text-center"><%=StudentAnswer[i].contentName%></td>
+            
             <td style="<%=cLV1%>" class="text-center"><%=checkedLV1%><br><a class="a" href="<%=k%>"><%=training1%></a></td>
             <td style="<%=cLV2%>" class="text-center"><%=checkedLV2%><br><a class="a" href="<%=t%>"><%=training2%></a></td>
             <td style="<%=cLV3%>" class="text-center"><%=checkedLV3%><br><a class="a" href="<%=e%>"><%=training3%></a></td>
             <td style="<%=cLV4%>" class="text-center"><%=checkedLV4%><br><a class="a" href="<%=w%>"><%=training4%></a></td>
-            <td class="text-center"><%=TeacherCheck%></td>
+           <!-- -->
+            <td style="<%=bgColor%>" class="text-center"><%=TeacherCheck%></td>
             
             <tr>
             <%}
@@ -266,6 +303,9 @@ else {
                        
         
         </div>
+
+      
+
     </div>
  
 
