--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -11,7 +11,7 @@
                 <div class="col">
                     <% if (Object.keys(RecommendaResult[0].RecommendCourse).length !== 0) { %>
                         <h1 style="color: black;">หากทำแบบทดสอบหลังเรียน "<%= RecommendaResult[0].RecommendCourse %>" ไม่ผ่าน <br> Project Quiz จะยังไม่ปลดล็อก</h1>
-                        <p>จะต้องได้อย่างน้อย 3 คะแนนขึ้นไป ของพาร์ท Knowledge, Tracing และ Explaining</p> <br>
+                        <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนนขึ้นไปทุกด้าน</p> <br>
                     <% } else { %>
                     <% } %>
                     
