--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -8,49 +8,83 @@
                     <h4>การแนะนำแบบ   <%= RecommendaResult[0].RecommendationType %> <%# วิธีแนะนำคือ %>  </h4>
                 </div>
                 <div class="w-100"></div>
-                <div class="col">
-                    <% if (Object.keys(RecommendaResult[0].RecommendCourse).length !== 0) { %>
-                        <h1 style="color: black;">หากทำแบบทดสอบหลังเรียน "<%= RecommendaResult[0].RecommendCourse %>" ไม่ผ่าน <br> Project Quiz จะยังไม่ปลดล็อก</h1>
-                        <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนนขึ้นไปทุกด้าน</p> <br>
-                    <% } else { %>
-                    <% } %>
-                    
-                </div>
                 <div class="w-100"></div>
                 <div class="col">
      
-    
+                <!---->
                     <% if(RecommendaResult[0].RecommendCourse === "Algorithms and Flowcharts"){ %> <%# Output จาก Recommend มาเทียบ %> 
-                        
-                            <button onclick="window.location.href='/course-Algorithms_and_Flowcharts'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
-               
+                        <h2>บทที่ 1 <%= RecommendaResult[0].RecommendCourse %></h2>
+                        <% if(pre1done >= 1 ){ %>
+                                <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <button onclick="window.location.href='/course-Algorithms_and_Flowcharts'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>     
+                        <% } else{ %> 
+                                <button onclick="window.location.href='/course-Algorithms_and_Flowcharts-pre-test'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                        <% } %>
+                <!--2-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Datatype and Variable"){ %>
-                        
-                            <button onclick="window.location.href='/course-Datatype_and_Variable'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
-                        
+                        <h2>บทที่ 2 <%= RecommendaResult[0].RecommendCourse %></h2>
+                        <% if(pre2done >= 1 ){ %>
+                                <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <button onclick="window.location.href='/course-Datatype_and_Variable'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                        <% } else{ %> 
+                                 <button onclick="window.location.href='/course-Datatype_and_Variable-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                        <% } %>
+                
+                <!--3-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Input and Output"){ %>
-                        
-                            <button onclick="window.location.href='/course-Input_and_Output'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
-                   
+                        <h2>บทที่ 3 <%= RecommendaResult[0].RecommendCourse %></h2>
+                        <% if(pre2done >= 1 ){ %>
+                                <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <button onclick="window.location.href='/course-Input_and_Output'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                        <% } else{ %> 
+                                 <button onclick="window.location.href='/course-Input_and_Output-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                        <% } %>
+                <!--4-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Operators and Expressions"){ %>
-                        
-                            <button onclick="window.location.href='/course-Operators_and_Expressions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
-                  
+                        <h2>บทที่ 4 <%= RecommendaResult[0].RecommendCourse %></h2>
+                        <% if(pre2done >= 1 ){ %>
+                                <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <button onclick="window.location.href='/course-Operators_and_Expressions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                        <% } else{ %> 
+                                 <button onclick="window.location.href='/course-Operators_and_Expressions-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                        <% } %>
+                <!--5-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statements"){ %>
-                        
-                            <button onclick="window.location.href='/course-Selection_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
+                        <h2>บทที่ 5 <%= RecommendaResult[0].RecommendCourse %></h2>
+                        <% if(pre2done >= 1 ){ %>
+                                <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <button onclick="window.location.href='/course-Selection_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                        <% } else{ %> 
+                                 <button onclick="window.location.href='/course-Selection_Statements-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                        <% } %>
+                <!--6-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statements"){ %>
-                        
-                            <button onclick="window.location.href='/course-Loop_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
-                  
+                        <h2>บทที่ 6 <%= RecommendaResult[0].RecommendCourse %></h2>
+                        <% if(pre2done >= 1 ){ %>
+                                <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <button onclick="window.location.href='/course-Loop_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                        <% } else{ %> 
+                                 <button onclick="window.location.href='/course-Loop_Statements-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                        <% } %>
+                <!--7-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Arrays and Strings"){ %>
-                        
-                            <button onclick="window.location.href='/course-Arrays_and_Strings'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
-                  
+                        <h2>บทที่ 7 <%= RecommendaResult[0].RecommendCourse %></h2>
+                        <% if(pre2done >= 1 ){ %>
+                                <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <button onclick="window.location.href='/course-Arrays_and_Strings'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                        <% } else{ %> 
+                                 <button onclick="window.location.href='/course-Arrays_and_Strings-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                        <% } %>
+                <!--8-->
                     <% }else if(RecommendaResult[0].RecommendCourse === "Functions"){ %>
-                        
-                            <button onclick="window.location.href='/course-Functions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
-                    
+                        <h2>บทที่ 8 <%= RecommendaResult[0].RecommendCourse %></h2>
+                        <% if(pre2done >= 1 ){ %>
+                                <p>ด้าน Knowledge, Tracing และ Explaining จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <button onclick="window.location.href='/course-Functions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>เข้าสู่เนื้อหา</button>
+                        <% } else{ %> 
+                                 <button onclick="window.location.href='/course-Functions-pretest'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> แบบทดสอบก่อนเรียน</button>  
+                        <% } %>
+
                     <% } else{ %>  <%# ถ้าไม่มีการแนะนำ คือ เรียนตาม path ที่เลือกเรียบร้อยแล้ว%> 
                         <button type="button" class="btn btn-outline-dark btn-sm btn-block " data-bs-toggle="modal" data-bs-target="#RecommendSetting"><svg height="20" width="20" viewBox="0 0 512 512">
                             <path d="M505.2 324.8l-47.73-68.78l47.75-68.81c7.359-10.62 8.797-24.12 3.844-36.06c-4.969-11.94-15.52-20.44-28.22-22.72l-82.39-14.88l-14.89-82.41c-2.281-12.72-10.76-23.25-22.69-28.22c-11.97-4.936-25.42-3.498-36.12 3.844L256 54.49L187.2 6.709C176.5-.6016 163.1-2.039 151.1 2.896c-11.92 4.971-20.4 15.5-22.7 28.19l-14.89 82.44L31.15 128.4C18.42 130.7 7.854 139.2 2.9 151.2C-2.051 163.1-.5996 176.6 6.775 187.2l47.73 68.78l-47.75 68.81c-7.359 10.62-8.795 24.12-3.844 36.06c4.969 11.94 15.52 20.44 28.22 22.72l82.39 14.88l14.89 82.41c2.297 12.72 10.78 23.25 22.7 28.22c11.95 4.906 25.44 3.531 36.09-3.844L256 457.5l68.83 47.78C331.3 509.7 338.8 512 346.3 512c4.906 0 9.859-.9687 14.56-2.906c11.92-4.969 20.4-15.5 22.7-28.19l14.89-82.44l82.37-14.88c12.73-2.281 23.3-10.78 28.25-22.75C514.1 348.9 512.6 335.4 505.2 324.8zM456.8 339.2l-99.61 18l-18 99.63L256 399.1L172.8 456.8l-18-99.63l-99.61-18L112.9 255.1L55.23 172.8l99.61-18l18-99.63L256 112.9l83.15-57.75l18.02 99.66l99.61 18L399.1 255.1L456.8 339.2zM256 143.1c-61.85 0-111.1 50.14-111.1 111.1c0 61.85 50.15 111.1 111.1 111.1s111.1-50.14 111.1-111.1C367.1 194.1 317.8 143.1 256 143.1zM256 319.1c-35.28 0-63.99-28.71-63.99-63.99S220.7 192 256 192s63.99 28.71 63.99 63.1S291.3 319.1 256 319.1z"/>
