--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -364,16 +364,16 @@
                 <div style="display: flex;">
                     <div class="quiz_box">
                         <p class="score_title">Quiz 1</p>
-                        <div class="pie animate" style="--p:<%= TicTacToeScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= TicTacToeScore %> %</div>
+                        <div class="pie animate" style="--p:<%= TicTacToeScore %>;--c:#bd7b67; font-size: 14px;"> <%= TicTacToeScore %> %</div>
                     </div>
 
                     <div class="quiz_box">
                         <p class="score_title">Quiz 2</p>
-                        <div class="pie animate" style="--p:<%= LibrarySystemScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= LibrarySystemScore %> %</div>
+                        <div class="pie animate" style="--p:<%= LibrarySystemScore %>;--c:#bd7b67; font-size: 14px;"> <%= LibrarySystemScore %> %</div>
                     </div>                                   
                     <div class="quiz_box">
                         <p class="score_title">Quiz 3</p>
-                        <div class="pie animate" style="--p:<%= RoshamboScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= RoshamboScore %> %</div>                  
+                        <div class="pie animate" style="--p:<%= RoshamboScore %>;--c:#bd7b67; font-size: 14px;"> <%= RoshamboScore %> %</div>                  
                     </div> 
                 </div>
                 
